deployment/phnx-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: phnx-backend
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9420
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: infra-server-dev
