deployment/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phnx-ingress-http
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.phnx.im
  rules:
  - host: dev.phnx.im
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phnx-backend
            port:
              number: 80
